fix border lang-switch

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         .lang-switch {
             display: flex;
             background: #f5f5f5;
-            border-radius: 25px;
+            border-radius: 5px;
             padding: 4px;
             gap: 4px;
         }
@@ -55,7 +55,7 @@
         .lang-switch button {
             border: none;
             padding: 8px 16px;
-            border-radius: 20px;
+            border-radius: 5px;
             cursor: pointer;
             background: transparent;
             font-weight: 600;
@@ -650,6 +650,7 @@
             width: 100%;
             border-collapse: collapse;
             font-size: 0.9rem;
+            background: url();
         }
 
         .tide-table th {
